feat: 實作 AI 任務生成與軟刪除機制
主要功能:
- AI 任務生成: 整合 Google Generative AI (Gemini 2.5 Flash Lite)
  * 根據專案名稱/描述自動生成 5-8 個任務清單
  * 前端可預覽並勾選保留/刪除 AI 生成的任務
  * API: POST /timelines/<id>/generate-tasks, /batch-create-tasks
  * 使用 response_mime_type='application/json' 限定輸出格式

- 軟刪除 (Soft Delete): timelines 和 tasks 新增 deleted 欄位
  * 所有刪除操作改為標記 deleted=True，而非物理刪除
  * API 查詢自動過濾 deleted=False，前端只顯示未刪除資料
  * 專案刪除時連帶軟刪除所有任務
  * 批量創建任務時軟刪除未勾選的舊任務

技術改進:
- 新增依賴: google-generativeai (requirements.txt)
- 環境變數: GOOGLE_API_KEY (.env.example)
- Alembic migration: 新增 deleted 欄位到 timelines 和 tasks
- 解決 migration 多 head 衝突

影響檔案:
- backend/blueprints/timelines.py
- backend/models/{timeline,task}.py
- backend/requirements.txt, .env.example
- backend/migrations/versions/*
- frontend/src/views/TimelinesView.vue
- 文件更新: 每日改動紀錄.md, 功能優先級.md, 重構計畫.md

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,6 +5,9 @@ JWT_SECRET_KEY=your-jwt-secret-key-here
 # 資料庫設定
 DATABASE_URL=sqlite:///learnlink.db
 
+# Google Gemini API 設定
+GOOGLE_API_KEY=your-google-api-key-here
+
 # 其他設定
 FLASK_ENV=development
 FLASK_DEBUG=True
